[gd_scene load_steps=13 format=3 uid="uid://dlksrlwpu1heh"]

[ext_resource type="Script" path="res://assets/laser_beam/laser_beam.gd" id="1_wb5fa"]
[ext_resource type="Texture2D" uid="uid://t105tdvgunrx" path="res://assets/effects/visuals/assets/glowing_circle.png" id="1_yxuu6"]
[ext_resource type="Texture2D" uid="uid://byj3dgtoqix1l" path="res://assets/laser_beam/ray_tiled.png" id="2_1wrsu"]

[sub_resource type="Gradient" id="Gradient_rrach"]
offsets = PackedFloat32Array(0.582915, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("Gradient_rrach")

[sub_resource type="Curve" id="Curve_khfcy"]
_data = [Vector2(0.518072, 1), 0.0, -3.53434, 0, 0, Vector2(1, 0.516483), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="4"]
width = 2048
curve = SubResource("Curve_khfcy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6xgog"]
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("4")
color_ramp = SubResource("2")

[sub_resource type="Curve" id="Curve_lj5b1"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.503614, 0.957505), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="7"]
curve = SubResource("Curve_lj5b1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_27ndt"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(60, 20, 1)
direction = Vector3(-1, 0, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = 100.0
tangential_accel_max = 100.0
scale_min = 0.1
scale_max = 0.2
scale_curve = SubResource("7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_j7swn"]
particle_flag_disable_z = true
spread = 50.0
initial_velocity_min = 300.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_curve = SubResource("4")
color_ramp = SubResource("2")

[node name="LaserBeam2D" type="RayCast2D"]
target_position = Vector2(0, 0)
script = ExtResource("1_wb5fa")
max_length = 3000

[node name="FillLine2D" type="Line2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
z_index = 2
position = Vector2(0.16667, 0)
scale = Vector2(1.01667, 2.3)
points = PackedVector2Array(0, 0, 100, 0)
texture = ExtResource("2_1wrsu")
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 8.0
antialiased = true

[node name="CastingParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
z_index = 10
z_as_relative = false
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_6xgog")
texture = ExtResource("1_yxuu6")
lifetime = 0.3
visibility_rect = Rect2(0, -18.722, 29.6756, 38.4841)
trail_lifetime = 10.0
trail_sections = 100

[node name="BeamParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
z_index = 10
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_27ndt")
texture = ExtResource("1_yxuu6")
lifetime = 0.5
preprocess = 1.0
speed_scale = 26.39
explosiveness = 1.0
randomness = 0.79
visibility_rect = Rect2(-2500, -2500, 5000, 5000)

[node name="CollisionParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1.5, 1.5, 1.5, 1)
show_behind_parent = true
z_index = 10
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_j7swn")
texture = ExtResource("1_yxuu6")
lifetime = 0.3
speed_scale = 57.3
randomness = 1.0
visibility_rect = Rect2(-2500, -2500, 5000, 5000)
trail_enabled = true
trail_sections = 20
